# Number-Plate-Generator

./: .gitignore  README.md  justification.md  justification.txt  plate_state.json  pyproject.toml
number_plate_generator/: __main__.py  plate_generator.py
src/number_plate_generator/: plate_generator.py
src/number_plate_generator.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: conftest.py  test_plate_generator.py
