[build-system]
# setuptools is the most widely-used build backend and the PyPA default.
# build-system.requires tells pip what to install before building the package.
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "number-plate-generator"
version = "0.1.0"
requires-python = ">=3.11"

# pytest is a dev/test dependency only — not needed at runtime.
# Declared under optional-dependencies so `pip install -e ".[dev]"` installs it.
[project.optional-dependencies]
dev = ["pytest>=8.0"]

[tool.setuptools.packages.find]
# Tells setuptools to look for packages inside src/ (src layout convention).
where = ["src"]

[tool.pytest.ini_options]
# Points pytest at the tests/ directory and ensures src/ is on sys.path
# so `from number_plate_generator import ...` works without a full install.
testpaths = ["tests"]
pythonpath = ["src"]
